# mpc-algebra

./: Cargo.toml
src/: channel.rs  com.rs  group.rs  reveal.rs
src/share/: add.rs  spdz.rs
src/share/gsz20/: mod.rs
src/wire/: field.rs  group.rs  pairing.rs
