[package]
name = "mpc-algebra"
version = "0.1.0"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2018"

[dependencies]
ark-ff = {git = "https://github.com/SRI-CSL/algebra", default-features=false, branch = "v3_sri",features=["asm","parallel"]}
ark-ec = {git = "https://github.com/SRI-CSL/algebra", default-features=false, branch = "v3_sri"}
ark-poly = {git = "https://github.com/SRI-CSL/algebra", default-features=false, branch = "v3_sri"}
ark-bls12-377 = { git = "https://github.com/SRI-CSL/curves", default-features = false, features = [ "curve", "r1cs" ], branch = "v3_sri" }
ark-relations = { git = "https://github.com/SRI-CSL/snark", branch = "v3_sri", default-features = false }


ark-serialize = { git = "https://github.com/SRI-CSL/algebra", default-features = false, branch = "v3_sri", features = [ "derive" ] }
ark-std = { version="0.2.1-alpha.0" ,  git = "https://github.com/SRI-CSL/utils", default-features = false}


lazy_static = "1"
once_cell = "1.8"
derivative = { version = "2.0", features = ["use_core"]}
log = {version = "0.4"}
digest = { version = "0.9" }

rand = { version = "0.7", default-features = false, features = ["std"] }
rand_chacha = { version = "0.3", default-features = false }
rayon = { version = "1.0.0", optional = true }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
mpc-net = { git = "https://github.com/SRI-CSL/mpc-net" }
mpc-trait = { git =  "https://github.com/SRI-CSL/mpc-trait" }

env_logger = "0.8"
structopt = "0.3"
clap = "2"
merlin = "3"
sha2 = "0.9"
blake2 = "0.9"
